# ddb-explorer-mcp

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  renovate.json  server.json  smithery.yaml
.cursor/: mcp.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  docker-edge.yml  npm-publish.yml  release.yml  scorecard.yml  semantic-release.yml
.well-known/: mcp.json
docs/superpowers/specs/: 2026-04-23-infer-schema-design.md
examples/: PROMPTS.md  claude-desktop.json  cursor-local.json  docker-compose.yml  vscode-settings.json
npm/: README.md  package.json  run.js
src/ddb_explorer_mcp/: __init__.py  server.py
tests/: conftest.py  test_edge_cases.py  test_security.py  test_server.py
